--- a/resources/sass/partials/_select.scss
+++ b/resources/sass/partials/_select.scss
@@ -10,7 +10,7 @@
     border-radius: 4px 0px 0px 4px;
     text-align: left;
     margin-bottom: 10px;
-    z-index: 1;
+    z-index: 2;
     position: relative;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
     background: $white;
